--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>&mdash; of the &mdash;</h3>
         <h2>Progressive Web</h2>
       </section>
-      <section data-bespoke-backdrop="computer">
+      <section><img style="position:absolute;top:10%;left:26%;z-index:-1" src="images/90scomputer.gif">
         <h2>HTTP 0.9</h2>
         <h3>&mdash; circ. 1991 &mdash;</h3>
       </section>
