--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <h4>Jake Archibald, Google</h4>
       </section>
       <section data-bespoke-backdrop="loading">
-        <h2>Resilience</h2>
+        <h2>Designed</h2>
         <h3>&mdash; for the &mdash;</h3>
         <h2>real world</h2>
       </section>
